src/Style/Login.css
.loginPage {
    width: 100%;
    height: 100%;
    background: url("../Assets/Photo/home_bg.jpg") no-repeat center center fixed;
    background-size: cover;
    -webkit-background-size: cover;
    -moz-background-size:cover;
    -moz-background-size:cover;
    background-color: rgba(0, 0, 0, 0.8);
    background-blend-mode: multiply;
}
.login-heading{
    margin-block-start: 0.5em;
    margin-block-end: 0;
}
.login-sub-heading{
    margin-block-start: 0.3em;
    margin-block-end: 0;
}
.submitLoginButton{
    color: white;
    background-color: #0085FF;
}
.linkBox{
    margin-top: 10px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}
.headingContainer{
    text-align: center;
}

